# warehouse-management

./: .env.local.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
docker/scripts/: init_db.sh
tests/: conftest.py
tests/docker/: docker-compose.yml
tests/test_domain/: test_services.py  test_unit_of_work.py
tests/test_infrastructure/: test_orm.py  test_repositories.py
tests/test_integration/: test_end_to_end.py
warehouse_management/: container.py  main.py  settings.py
warehouse_management/application/: customer_service.py
warehouse_management/domain/: exceptions.py  models.py  repositories.py  services.py  unit_of_work.py
warehouse_management/infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
